# libb2-reforged

./: .clang-format  .clang-tidy  .copier-answers.yml  CMakeLists.txt  CMakePresets.json  README.rst  sources.cmake  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cpp-ci.yml
docs/: conf.py  index.rst  root.html
master/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
master/.doctrees/: environment.pickle  index.doctree
src/: blake2.h
src/blake2_tests/: blob_matcher.hpp  hex_decode.hpp  hex_encode.hpp  impl_id_generator.hpp  kat_json_generator.hpp  test_utils.hpp
src/dplx/: blake2.h  blake2.hpp  blake2.test.cpp
src/dplx/blake2/: config.hpp  config.test.cpp
src/dplx/blake2/detail/: blake2-dispatch-stub.c  blake2-dispatch.c  blake2-impl-type.def  blake2b-common.c.inc  blake2b-generic.c  blake2b-neon-round.h  blake2b-neon.c  blake2b-sse2.c  blake2b-sse41.c  blake2b-x86-round.h  blake2b-x86.c  blake2s-avx.c  blake2s-common.c.inc  blake2s-generic.c  blake2s-neon-round.h  blake2s-neon.c  blake2s-x86-round.h  blake2s-x86.c  blake2xb-generic.c  blake2xs-generic.c  libb2-compat.c  workaround.hpp  workaround.test.cpp
tools/: config.hpp.in  libb2-reforged-config.cmake.in
tools/cmake/: CompilerWarnings.cmake  SourceHelpers.cmake
tools/toolchains/: x64-linux-clang.cmake  x64-linux-gcc-13.cmake  x64-linux-gcc-14.cmake
tools/triplets/: x64-macos-gcc-14.cmake
